--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-autosave",
+	"version": "0.0.1",
+	"description": "Regularly, truly, autosaves on change. Causing save listeners to get triggered.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -9,7 +9,7 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "solomonrosemite",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
